[package]
name = "vocabulist_rs"
version = "0.1.0"
authors = ["Odaka Ui <odakaui@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
rusqlite = "0.23.1"
indicatif = "0.15.0"
glob = "0.3.0"
itertools = "0.9.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["blocking"] }
toml = "0.5"
dirs = "3"
